# software-testing

./: .gitignore  CONTRIBUTING.md  Makefile  README.md  dune-project  lab-calculator.opam  lab03-parser.opam  main.bc.js
.github/workflows/: main.yml  playwright.yml
Lab01-vector/: .ocamlformat  CONTRIBUTING.md  LICENSE  README.md  dune-project  lab01-vector.opam
Lab01-vector/lib/: dune  lab01_vector.ml  lab01_vector.mli  vector.ml  vector.mli
Lab01-vector/test/: AlcotestExt.ml  AlcotestExt.mli  dune  lab01_vector_test.ml  vector2_test.ml
app/: dune  main.ml
app/lib/: dune  lib.ml
app/test/: dune  test.ml
app_test/: .gitignore  package-lock.json  package.json  playwright.config.ts
app_test/tests/: app.spec.ts
lab01-vector/: CONTRIBUTING.md
lab01-vector/lib/: dune  vector.mli
lab01-vector/test/: AlcotestExt.ml  dune  vector2_test.ml
lab02-vector/: .gitignore  Makefile  README.md  dune-project  lab02-vector.opam
lab02-vector/lib/: dune
lab02-vector/test/: AlcotestExt.mli  dune  lab02_vector_test.ml
lab03-parser/: Makefile  README.md  dev.opam  dune  dune-project  lab03-parser.opam
lab03-parser/lib/: calc.ml  calc.mli  calc_vector.ml  calcs.ml  calcs.mli  dune  parser.ml  parser.mli  parser_intf.ml  vector.ml  vector.mli
lab03-parser/test/: dune  lab03_parser_test.ml  parser_mock.ml  parser_test.ml  test.ml  test_calc.ml  test_mock.ml
lib/: calc.ml  calc.mli  calcs.ml  calcs.mli  calculator.ml  calculator.mli  dune  parser.ml  parser.mli  pl.ml  tripleorand.ml  vector.ml  vector.mli
test/: dune  test.ml  test_calc.ml
