(lang dune 2.7)

(name lab03-parser)

(license MIT)

(authors "Vladislav Prekel")

(maintainers "Vladislav Prekel")

(generate_opam_files true)

(package
 (name lab03-parser)
 (synopsis "A short, but powerful statement about your project")
 (description "A short, but powerful statement about your project")
 (depends
  (ocaml
   (>= 4.08.0))
  dune
  (core :build)
  (ppx_jane :build)
  (bisect_ppx :with-test)
  (ocaml-lsp-server
   (and
    :with-test
    (= 1.9.1)))
  (ocamlformat :with-test)
  (ocamlformat-rpc :with-test)
  (utop :with-test)
  (odoc :with-doc)))
